# Term

./: .clang-format  CMakeLists.txt  README.md  test.c  test.py
assets/: shader_2d.frag  shader_2d.vert  shader_3d.frag  shader_3d.vert
docs/: structure_generation.txt
src/: color.c  color.h  file.c  file.h  font.h  geometry.c  geometry.h  grid.c  grid.h  input.c  input.h  list.h  main.c  pseudo_console.c  pseudo_console.h  reader.c  reader.h  selection.c  selection.h  text_buffer.c  text_buffer.h  window.c  window.h
src/graphics/: mesh.c  mesh.h  renderer.c  renderer.h  resources.c  resources.h  sprite_batch.c  sprite_batch.h
